Update for backup

--- a/index.html
+++ b/index.html
@@ -38,31 +38,38 @@
     </div>
   </div>  <!-- End of Row -->
 
+  <!-- Instructions Row -->
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <h3><span class="instructions"></span></h3>
+    </div>   
+
+  </div>
   <!-- Charaters row -->
   <div class="row">
-    <div class="col-md-8 col-md-offset-2" >
+    <div class="col-md-8 col-md-offset-2 mainChar" >
       <div id="leiaBox" class="pictureBox"> 
         <p class="boxData">Leia</p>
         <img id="leia" src="assets/images/leia.jpg" class="img-responsive imgChar" alt="A character" >
-        <p id="leiaHealth" class="boxData">120</p>
+        <p id="leiaHealth" class="boxData"></p>
       </div>
 
       <div id="hansBox" class="pictureBox"> 
         <p class="boxData">Hans</p> 
         <img id="hans" src="assets/images/hans.jpg" class="img-responsive imgChar" alt="A character" >
-        <p id="hansHealth" class="boxData">120</p>
+        <p id="hansHealth" class="boxData"></p>
       </div>
 
       <div id="jthBox" class="pictureBox"> 
         <p class="boxData">JTH</p>
         <img id="jth" src="assets/images/jth.jpg" class="img-responsive imgChar" alt="A character" >
-        <p id="jthHealth" class="boxData">120</p>
+        <p id="jthHealth" class="boxData"></p>
       </div>
 
       <div id="darthBox" class="pictureBox"> 
         <p class="boxData">Darth</p>
         <img id="darth" src="assets/images/dm.jpg" class="img-responsive imgChar" alt="A character" >
-        <p id="darthHealth" class="boxData">120</p>
+        <p id="darthHealth" class="boxData"></p>
       </div>
 
     </div>
@@ -73,7 +80,7 @@
     <!-- <div class="col-md-8 col-md-offset-2 "> -->
 
       <div class=" col-md-2 col-md-offset-4 fightHeader">
-        <h3>Your Character</h3>
+        <h3>The Hero</h3>
         <div class="heroBox">
           <!-- The hero will be cloned here -->
 
@@ -96,8 +103,8 @@
 <!-- Status Section -->
   <div class="row">
     <div class="col-md-4 col-md-offset-3" >
-      <p class="heroStatus"><span class="heroMsg">this is a test</span></p>
-      <p class="enemyStatus"><span class="enemyMsg">this is a test</span> </p>
+      <h3 class="heroStatus"><span class="heroMsg"></span></h3>
+      <h3 class="enemyStatus"><span class="enemyMsg"></span> </h3>
     </div>
   </div>
 
