--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   </div>
   <!-- Charaters row -->
-  <div class="row">
+  <div class="row charRow">
     <div class="col-md-8 col-md-offset-2 mainChar" >
       <div id="leiaBox" class="pictureBox"> 
         <p class="boxData">Leia</p>
